--- a/src/pages/user/styles/MsgEdit.scss
+++ b/src/pages/user/styles/MsgEdit.scss
@@ -1,6 +1,12 @@
+// ----- 麵包屑 -----
+.u-breadcrumb {
+  margin-top: 20px;
+  margin-left: 70px;
+}
+
 // ===== Menu =====
 .u-userMenu {
-  margin-top: 30px;
+  margin-top: 10px;
   margin-left: 70px;
 }
 
