--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -26,7 +26,7 @@
     } */
 
     .map-area{
-        height:100vh;
+        // height:100vh;
         overflow: hidden;
     }
 
@@ -42,6 +42,22 @@
 
     /*開源地圖*/
     #osm-map{
-        height: 100vh;
+        height: calc(100vh - 15vh);
         width: 100%;
     }
+
+    
+    .map-search-bar{
+        height: 15vh;
+        background-color: #000;
+        
+    }
+
+    .map-select div{
+        font-size: 1.5rem;
+        color: #E8E8E8;
+        font-weight: normal;
+        border: 2px solid #E8E8E8;
+    }
+
+    
