event upload start

--- a/src/pages/event/style/Lightheader.scss
+++ b/src/pages/event/style/Lightheader.scss
@@ -5,8 +5,8 @@ $eblue: #1D0AFF;
 $egreydk: #A7A7A7;
 $egreylt: #E8E8E8;
 
-.e-header{
-    background-color: E8E8E8;
+.e-l-header{
+    background-color: #E8E8E8;
 
 }
 
