--- a/src/pages/user/styles/Ticket.scss
+++ b/src/pages/user/styles/Ticket.scss
@@ -56,7 +56,7 @@
   }
 
   .u-Eve2, .u-Eve3, .u-Eve4, .u-Eve5{
-    margin-top: 23px;
+    margin-top: 15px;
   }
 
   .u-ticBtn{
@@ -76,7 +76,7 @@
       right: 50px;
   }
 
-  .u-BtnBlack {
+  .u-BtnBlack > .u-ticdetail {
     width: 150px;
     height: 50px;
     background-color: #000;
@@ -84,6 +84,7 @@
     position: absolute;
     top: 135px;
     right: 50px;
+    font-size: 18px;
   }
 
   .u-link2 {
@@ -94,10 +95,10 @@
     color:#000;
   }
 
-  .u-link3 {
-    color: #fff;
-  }
+  // .u-link3 {
+  //   color: #fff;
+  // }
 
-  .u-link3:hover{
-    color:#fff;
-  }
+  // .u-link3:hover{
+  //   color:#fff;
+  // }
