--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -1,3 +1,5 @@
+    // !Default
+    
     @font-face {
     font-family: Engravers;
     src:url(../../style/font/ENGR.ttf);
@@ -21,18 +23,18 @@
         font-family: Engravers;
     }
 
-    /* body {
-        width: 100%;
-    } */
+    .index-web-padding{
+        padding-right: 70px;
+    }
+
+    // !Default
 
     .map-area{
         // height:100vh;
         overflow: hidden;
     }
 
-    .index-web-padding{
-        padding-right: 70px;
-    }
+    
 
     .map-logo{
         margin-left: 70px;
@@ -53,11 +55,81 @@
         
     }
 
-    .map-select div{
-        font-size: 1.5rem;
+    .map-select-box{
+        height: 5vh;
+        font-size: 1rem;
         color: #E8E8E8;
         font-weight: normal;
-        border: 2px solid #E8E8E8;
+        border: 1px solid #E8E8E8;
     }
+
+    .map-select{
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        background: transparent;
+        background-image: url('./img/select-arrow.svg');
+        background-repeat: no-repeat;
+        background-position-x: 100%;
+        background-position-y: 50%;
+        padding-right: 2rem;
+    }
+    
+
+    // 搜尋
+
+    .map-search{
+        position: relative;
+    }
+
+    .map-search input[type="text"] {
+        height: 60px;
+        font-size: 1rem;
+        display: inline-block;
+        font-family: "Lato";
+        border: none;
+        outline: none;
+        color: #E8E8E8;
+        padding: 3px;
+        padding-right: 60px;
+        width: 0px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background: none;
+        z-index: 3;
+        transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+        cursor: pointer;
+      }
+      
+      .map-search input[type="text"]:focus:hover {
+        border-bottom: 1px solid #E8E8E8;
+      }
+      
+      .map-search input[type="text"]:focus {
+        width: 25%;
+        z-index: 1;
+        cursor: text;
+      }
+      .map-search input[type="submit"] {
+        height: 67px;
+        width: 63px;
+        display: inline-block;
+        color:#81FC4D;
+        float: right;
+        background: url('../../pics/arr-left.svg') no-repeat;
+        text-indent: -10000px;
+        border: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 2;
+        cursor: pointer;
+        opacity: 0.4;
+        transition: opacity .4s ease;
+      }
+      
+      .map-search input[type="submit"]:hover {
+        opacity: 0.8;
+      }
 
     
