--- a/src/pages/event/style/EventMore.scss
+++ b/src/pages/event/style/EventMore.scss
@@ -6,3 +6,32 @@
     font-weight: 500;
     border-bottom: 4px solid black;
 }
+.e-more-card {
+    img{
+    border: 2px solid #707070;
+    }
+    h6{
+    font-size: 1.3rem;
+    font-weight: 500;
+    }
+    p{
+    font-size: 1rem;
+    font-weight: normal;
+    color: #535353;
+    line-height: 1.2rem;
+    letter-spacing: 2px;
+    }
+    span{
+    font-size: 1rem;
+    font-weight: normal;
+    color: #535353;
+    line-height: 1.2rem;
+    letter-spacing: 2px;
+    }
+    button{
+        height: 100%;
+        border: 0px;
+        background-color: #A7A7A7;
+        color: white;
+    }
+}
