--- a/src/pages/event/style/WorkshopUpload.scss
+++ b/src/pages/event/style/WorkshopUpload.scss
@@ -30,3 +30,87 @@ $egreylt: #E8E8E8;
 .es-bread{
     border-top: 2px solid black;
 }
+
+// !Upload Left Area
+
+.eu-pic-up{
+    h5{
+        font-weight: normal;
+        font-size: 1.3rem;
+    }
+    h2{
+        font-weight: 500;
+        font-size: 1.9rem;
+    }
+
+}
+
+.eu-upload-title {
+    font-size: 1.3rem;
+}
+
+.eu-pic-left{
+    div{
+        background-color: white; 
+        img{
+        width: 100%;
+        }
+    }
+}   
+    
+
+.eu-pic-right{
+    div{
+        div{
+            background-color: white;  
+            img{
+                width: 100%;
+            }
+        }
+    }
+}
+
+.eu-more-event{
+    background-color: white;
+    h2{
+        font-weight: bold;
+        font-size: 1.9rem;
+        letter-spacing: 4px;
+        span{
+            font-size: 2.2rem;
+            color: #1D0AFF;
+            letter-spacing: 0px;
+        }
+    }
+}
+
+.eu-text{
+    resize: none;
+}
+
+.eu-send-cmt{
+    background-color: #1D0AFF;
+    border: 0px;
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.eu-list-card {
+    border-top: 1px solid black;
+    img{
+    border: 2px solid #707070;
+    }
+    h6{
+    font-size: 1.3rem;
+    font-weight: 500;
+    }
+    p{
+    font-size: 1rem;
+    font-weight: normal;
+    color: #535353;
+    line-height: 1.2rem;
+    letter-spacing: 2px;
+}
+}
+
