--- a/src/pages/product/style/ProductList.css
+++ b/src/pages/product/style/ProductList.css
@@ -108,3 +108,37 @@
     width: 100%;
     height: 200px;
 }
+.prolist-breadbox{
+    background-color: rgb(212, 208, 255);
+    width: 100%;
+    height: 70px;
+}
+.prolist-bread{
+    padding-top: 35px;
+}
+.prolist-breadwordall{
+    font-family: notoSansTC-Medium;
+    color: black;
+}
+.prolist-breadwordA{
+    color: #7a7a7a;
+    font-family: notoSansTC-Medium;
+
+}
+.prolist-breadwordB{
+    color: black;
+    font-family: notoSansTC-Medium;
+
+}
+.prolist-filterName{
+    border: 1px solid black;
+    padding: 7px 10px;
+}
+.prolist-controlFilter{
+    padding-left: 20px
+    ;
+}
+.prolist-searchIcon{
+    margin-top: 10px;
+    margin-left: 5%;
+}
