--- a/src/pages/product/style/ProductList.css
+++ b/src/pages/product/style/ProductList.css
@@ -97,19 +97,18 @@
     width: calc(100vw - 80px);
 }
 .prolist-row{
-    background-color: rgb(124, 252, 252);
+    /* background-color: rgb(124, 252, 252); */
     width:calc(100vw - 210px);
     height: 2000px;
     margin: 0 auto;
 }
 
 .prolist-topOflist{
-    background-color:rgb(250, 250, 131);
     width: 100%;
-    height: 200px;
+    height: 170px;
+    border-bottom: 2px solid black;
 }
 .prolist-breadbox{
-    background-color: rgb(212, 208, 255);
     width: 100%;
     height: 70px;
 }
@@ -130,6 +129,13 @@
     font-family: notoSansTC-Medium;
 
 }
+.prolist-filter{
+    justify-content: space-between;
+    height: 50px;
+}
+.prolist-arrangeAndIcon{
+    padding: 0;
+}
 .prolist-filterName{
     border: 1px solid black;
     padding: 7px 10px;
@@ -141,4 +147,27 @@
 .prolist-searchIcon{
     margin-top: 10px;
     margin-left: 5%;
+}
+.prolist-sliderbox{
+    width: 200px;
+    height: 50px;
+    justify-content: flex-end;
+    margin-top: 15px;
+}
+.prolist-slider{
+    width: 100%; 
+    height: 25px;
+    background: #d3d3d3;
+    opacity: 0.7; 
+}
+.pro-priceRange{
+    margin-top: 15px;
+    margin-right: 30px;
+    font-size: 1.1rem;
+}
+.pro-showing{
+
+}
+.pro-filterWord{
+    font-family: notoSansTC-Medium;
 }
