--- a/src/pages/product/style/ProductList.css
+++ b/src/pages/product/style/ProductList.css
@@ -250,6 +250,7 @@
 }
 .prolist-cardProName p{
     font-family: notoSansTC-Medium;
+    font-size: 1.3vw;
 }
 .prolist-cardProPrice p {
     font-family: notoSansTC-Medium;
