--- a/src/pages/product/style/ProductList.css
+++ b/src/pages/product/style/ProductList.css
@@ -82,7 +82,7 @@
 .prolist-quote p{
     font-family: Engravers;
     text-align: center;
-    font-size: 2rem;
+    font-size: 2vw;
     margin-top: 20px;
 }
 .prolist-quote2 p{
