--- a/src/pages/product/style/ProductList.css
+++ b/src/pages/product/style/ProductList.css
@@ -184,7 +184,6 @@
     margin-top: 50px;
 }
 .prolist-rightSide{
-    background-color: greenyellow;
     width: 55vw;
     height: 1500px;
 }
@@ -195,6 +194,7 @@
     font-size: 1.5rem;
     padding: 13px 0 0 20px;
     color: black;
+    text-decoration:none;
 }
 
 .museumProduct{
@@ -212,6 +212,8 @@
     color:white;
     padding: 13px 0 0 20px;
     font-size: 1.5rem;
+    text-decoration:none;
+
 }
 
 /* ----------------product item--------- */
