--- a/src/pages/cart/styles/cart-product.scss
+++ b/src/pages/cart/styles/cart-product.scss
@@ -1,9 +1,9 @@
 @font-face {
-  font-family: NotoSansTC-md;
+  font-family: 'Noto Sans TC Medium';
   src: url(../../../style/font/NotoSansTC-Medium.otf);
 }
 @font-face {
-  font-family: NotoSansTC-md;
+  font-family: 'Noto Sans TC Bold';
   src: url(../../../style/font/NotoSansTC-Bold.otf);
 }
 /* tab-product */
@@ -11,11 +11,11 @@
 /* total section */
 /* chechout */
 .c-bg {
+  font-family: 'Noto Sans TC Medium', sans-serif;
   width: calc(100% - 70px);
   height: 100%;
   background-color: #e8e8e8;
   padding: 0 10vw;
-  font-family: NotoSansTC;
 }
 .c-header {
   padding-top: 6vh;
