--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -24,12 +24,12 @@ font-face {
     background-color: #E8E8E8;
 }
 .proDe-leftSide{
-    width: 50vw;
+    width: calc(50vw - 35px);
     height: 1000px;
     background-color: aqua;
 }
 .proDe-rightSide{
-    width: 50vw;
+    width: calc(50vw - 35px);
     height: 1000px;
     background-color: black;
 }
@@ -40,8 +40,36 @@ font-face {
 }
 /* -------right hand side------ */
 .proDe-rightSideBox{
-    background-color: green;
-    width: 95%;
+    background-color: black;
+    width: 90%;
     height: 2000px;
     margin: 0 auto;
+}
+.proDe-logoTopBox{
+    width: 100%;
+    height: 130px;
+    border-bottom: 2px solid #6e6e6e;
+}
+.proDe-logoBox{
+    width: 210px;
+    height: 100px;
+    align-items:center;
+    margin-top: 3%;
+}
+.proDe-logoBox img{
+    width: 100%;
+}
+.proDe-logoBox p{
+    margin-top: 15px;
+    font-family: notoSansTC-Medium;
+    color: white;
+}
+.proDe-logoBox span{
+    color: #6e6e6e;
+}
+.proDe-chooseBox{
+    background-color: aquamarine;
+    width: 100%;
+    height: 500px;
+    margin-top: 35px;
 }
