--- a/src/pages/user/styles/MsgEdit.scss
+++ b/src/pages/user/styles/MsgEdit.scss
@@ -1,19 +1,19 @@
 // ----- 麵包屑 -----
 .u-breadcrumb {
   margin-top: 20px;
-  margin-left: 70px;
+  // margin-left: 70px;
 }
 
 // ===== Menu =====
 .u-userMenu {
   margin-top: 10px;
-  margin-left: 70px;
+  // margin-left: 70px;
 }
 
 // ----- 大標 -----
 .u-row {
   margin-top: 30px;
-  width: 1045px;
+  width: 80vw;
   margin-left: 0px;
   border-top: 2px solid #000;
   border-bottom: 2px solid #000;
