--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -14,25 +14,28 @@
 }
 
 .u-body {
-  width: calc(100% - 70px);
+  margin-right: 70px;
+  // width: calc(100% - 70px);
+  height: 150vh;
   background-color: #e8e8e8;
-  min-height: 150vh;
+  padding: 0 10vw;
+  font-family: NotoSansTC;
 }
 
-.u-container-fluid {
-  margin-left: 70px;
-}
+// .u-container-fluid {
+//   margin-left: 70px;
+// }
 
-.u-contanier1 {
-  margin-left: 70px;
-}
+// .u-contanier1 {
+//   margin-left: 70px;
+// }
 
 //----- carousel -----
 .u-img-carousel {
   position: relative;
   margin-top: 90px;
   width: 450px;
-  margin-left: 30px;
+  // margin-left: 30px;
   z-index: 0;
 }
 
@@ -43,6 +46,7 @@
   padding-bottom: 10px;
   position: absolute;
   top: 530px;
+  left: -10px;
 }
 
 .u-title01 > span {
@@ -57,7 +61,7 @@
   position: absolute;
   background-color: #81fc4d;
   top: 594px;
-  left: 80px;
+  left: 50px;
 }
 
 .u-title02 > span {
@@ -72,7 +76,7 @@
   background-color: #81fc4d;
   position: absolute;
   top: 658px;
-  left: 235px;
+  left: 205px;
 }
 
 .u-title03 > span {
@@ -94,15 +98,16 @@
 
 .u-member > h1 {
   font-family: EngraversBold;
-  font-size: 46px;
+  font-size: 40px;
   letter-spacing: 5px;
-  margin-left: -30px;
+  // margin-left: -30px;
 }
 
 //----- 登入、註冊btn -----
 
 .u-addbutton {
-  width: 520px;
+  width: 100%;
+  // width:35vw;
   border-top: 2px solid #000;
   border-bottom: 2px solid #000;
 }
@@ -110,7 +115,7 @@
 .u-loginbtn1 {
   margin-top: 10px;
   margin-bottom: 10px;
-  width: 200px;
+  width: 100%;
   height: 70px;
   text-align: center;
   line-height: 70px;
@@ -126,7 +131,7 @@
 .u-addbtn1 {
   margin-top: 10px;
   margin-bottom: 10px;
-  width: 200px;
+  width: 100%;
   height: 70px;
   background-color: #000;
   text-align: center;
@@ -143,7 +148,7 @@
 //----- icons -----
 
 .u-gf {
-  width: 520px;
+  width: 100%;
   height: 90px;
   border-bottom: 2px solid #000;
   font-size: 60px;
@@ -161,7 +166,7 @@
 
 .u-form > input {
   margin-top: 20px;
-  width: 520px;
+  width: 100%;
   height: 60px;
   background-color: #e8e8e8;
   border: 2px solid #000;
