--- a/src/pages/user/styles/Login.scss
+++ b/src/pages/user/styles/Login.scss
@@ -18,7 +18,7 @@
 .u-loginbtn {
   margin-top: 10px;
   margin-bottom: 10px;
-  width: 200px;
+  width: 100%;
   height: 70px;
   text-align: center;
   line-height: 70px;
@@ -35,7 +35,7 @@
 .u-addbtn {
   margin-top: 10px;
   margin-bottom: 10px;
-  width: 200px;
+  width: 100%;
   height: 70px;
   text-align: center;
   line-height: 70px;
@@ -49,5 +49,5 @@
 }
 
 .u-forgetPwd {
-  margin-left: 450px;
+  margin-left: 0px;
 }
