--- a/src/pages/user/styles/Logoheader.scss
+++ b/src/pages/user/styles/Logoheader.scss
@@ -1,17 +1,26 @@
-.u-headerbox {
-    width: 100%;
-    height: 30px;
-    background-color: #e8e8e8;
-  }
+// .u-headerbox {
+//     width: 100%;
+//     height: 30px;
+//     background-color: #e8e8e8;
+//   }
 
   //----- Logo -----
 .u-logo-header {
     // margin-left: 70px;
-    max-width: calc(100% - 70px);
-    border-bottom: 2px solid #000;
+    // max-width: calc(100% - 70px);
+    // width: 90vw;
+    // border-bottom: 2px solid #000;
+
+
+  padding-top: 6vh;
+  padding-bottom: 20px;
+  border-bottom: 3px solid black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   }
   
-  .u-logo-header > img {
-    width: 190px;
-    padding-bottom: 20px;
-  }
+  // .u-logo-header > img {
+  //   width: 190px;
+  //   padding-bottom: 20px;
+  // }
