--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -73,3 +73,33 @@ font-face {
     height: 500px;
     margin-top: 35px;
 }
+.proDe-nameAndHeart{
+    width: 100%;
+    height: 50px;
+    justify-content:space-between;
+    background-color:black;
+}
+.proDe-name p{
+    font-family: notoSansTC-Medium;
+    font-size: 2rem;
+    color: rgb(255, 255, 255);
+}
+.proDe-heartlogo{
+    margin-top: 5px;
+    margin-right: 10%;
+}
+.proDe-starsComment{
+    width: 100%;
+    height: 50px;
+    background-color: black;
+}
+.proDe-scoresAndWrite {
+    margin-top: 7px;
+    margin-left: 20px;  
+    font-family:notoSansTC-Medium;
+    color: #6e6e6e;
+}
+.proDe-writee{
+    margin-left: 20px;
+    border-bottom: 1px solid #6e6e6e;
+}
