--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -1,16 +1,16 @@
 /* ----- 大標 ----- */
-.u-orderItem {
-    margin-top:30px;
-    width: 1045px;
-    margin-left: 0px;
-    border-top: 2px solid #000;
-    border-bottom: 2px solid #000;
-}
+// .u-orderItem {
+//     margin-top:30px;
+//     width: 74vw;
+//     margin-left: 0px;
+//     border-top: 2px solid #000;
+//     border-bottom: 2px solid #000;
+// }
 
 .u-userPro, .u-userTic {
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 480px;
+    width: 100%;
     height: 70px;
     text-align: center;
     line-height: 70px;
@@ -36,7 +36,7 @@
 
 .u-progress{
     margin-top: 20px;
-    width: 200px;
+    width: 100%;
     height: 55px;
     font-size: 1.5rem;
     font-weight: normal;
