--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -22,14 +22,6 @@
   font-family: NotoSansTC;
 }
 
-// .u-container-fluid {
-//   margin-left: 70px;
-// }
-
-// .u-contanier1 {
-//   margin-left: 70px;
-// }
-
 //----- carousel -----
 .u-img-carousel {
   position: relative;
@@ -89,16 +81,16 @@
 
 .u-container2 {
   margin-top: 84px;
-  // margin-left: -75px;
 }
 
-.u-member {
+.u-membertile {
+  position: relative;
   text-align: center;
 }
 
-.u-member > h1 {
+.u-membertile > p {
   font-family: EngraversBold;
-  font-size: 40px;
+  font-size: 3rem;
   letter-spacing: 5px;
   // margin-left: -30px;
 }
