--- a/src/pages/user/styles/OrderTic.scss
+++ b/src/pages/user/styles/OrderTic.scss
@@ -1,15 +1,7 @@
-.u-orderItem {
-    margin-top:30px;
-    width: 1045px;
-    margin-left: 0px;
-    border-top: 2px solid #000;
-    border-bottom: 2px solid #000;
-}
-
 .u-userPro1, .u-userTic1 {
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 480px;
+    width: 100%;
     height: 70px;
     text-align: center;
     line-height: 70px;
