--- a/src/pages/user/styles/PwdEdit.scss
+++ b/src/pages/user/styles/PwdEdit.scss
@@ -21,7 +21,7 @@
 .u-usertitleLeft, .u-usertitleRight {
   margin-top: 10px;
   margin-bottom: 10px;
-  width: 480px;
+  width: 100%;
   height: 70px;
   text-align: center;
   line-height: 70px;
