--- a/src/pages/user/styles/Ticket.scss
+++ b/src/pages/user/styles/Ticket.scss
@@ -11,7 +11,7 @@
 .u-userEve, .u-userWshop {
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 480px;
+    width: 100%;
     height: 70px;
     text-align: center;
     line-height: 70px;
