--- a/src/pages/user/styles/WorkShop.scss
+++ b/src/pages/user/styles/WorkShop.scss
@@ -2,7 +2,7 @@
 .u-userEve1, .u-userWshop1 {
     margin-top: 10px;
     margin-bottom: 10px;
-    width: 480px;
+    width: 100%;
     height: 70px;
     text-align: center;
     line-height: 70px;
