--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -70,8 +70,9 @@ font-face {
 .proDe-chooseBox{
     background-color: black;
     width: 100%;
-    height: 1000px;
+    height: 390px;
     margin-top: 35px;
+    border-bottom: 2px solid #6e6e6e;
 }
 .proDe-nameAndHeart{
     width: 100%;
@@ -148,4 +149,68 @@ color: white;
 .proDe-sizeCheck p{
     margin-top: 27px;
     color: #6e6e6e;
+}
+
+.proDe-proId{
+    color: #6e6e6e;
+    width: 100%;
+    height: 30px;
+    margin-top: 15px;
+    font-family: notoSansTC-Medium;
+}
+.proDe-countAndAdd{
+    width: 100%;
+    height: 100px;
+    margin-top: 5%;
+    justify-content: space-between;
+}
+.proDe-numberAndBox{
+    width: 250px;
+    height: 50px;
+ align-items: center;
+ justify-content: space-between;
+
+
+}
+
+.proDe-numberName p{
+    font-family: notoSansTC-Medium;
+    color: white;
+    font-size:1.3rem;
+}
+
+
+.proDe-CountBtn button{
+    border: 1px solid #6e6e6e;
+    background-color:transparent;
+    color: white;
+    width: 50px;
+    height: 50px;
+}
+.proDe-spaceMid{
+    width: 100px;
+    height: 50px;
+    border-top: 1px solid #6e6e6e;
+    border-bottom: 1px solid #6e6e6e;
+}
+.proDe-spaceMid p{
+    color: white;
+    font-family: notoSansTC-Medium;
+    text-align: center;
+    margin-top: 8px;
+    font-size: 1.3rem;
+}
+.proDe-addToCart{
+    margin-right: 10%;
+}
+.proDe-addToCart button{
+    border: 1px solid white;
+    width: 200px;
+    height: 50px;
+    background-color:transparent;
+}
+.proDe-addToCart button p{
+    color: white;
+    font-family: notoSansTC-Medium;
+    font-size: 1.2rem;
 }
