--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -70,9 +70,14 @@ font-face {
 .proDe-chooseBox{
     background-color: black;
     width: 100%;
-    height: 390px;
+    height: 380px;
     margin-top: 35px;
     border-bottom: 2px solid #6e6e6e;
+}
+@media (min-width: 1440px){
+    .proDe-chooseBox{
+        height: 410px;
+    }
 }
 .proDe-nameAndHeart{
     width: 100%;
@@ -165,7 +170,7 @@ color: white;
     justify-content: space-between;
 }
 .proDe-numberAndBox{
-    width: 250px;
+    width: 47%;
     height: 50px;
  align-items: center;
  justify-content: space-between;
