--- a/src/pages/cart/styles/cart-shipping.scss
+++ b/src/pages/cart/styles/cart-shipping.scss
@@ -1,4 +1,3 @@
-
 .c-f12 {
   font-size: 12px;
 }
@@ -87,15 +86,7 @@
   border-top: 2px solid black;
 }
 .c-item1 {
-  padding: 15px 25px;
-  border: 2px solid #b9b9b9;
-  img {
-    width: 100px;
-    height: 100px;
-  }
-}
-.c-item2 {
-  padding: 15px 25px;
+  padding: 20px 25px;
   border: 2px solid #b9b9b9;
   img {
     width: 100px;
@@ -113,14 +104,14 @@
 
 .c-new {
   border-bottom: 1px solid black;
-  input, select {
+  input,
+  select {
     width: 100%;
     height: 50px;
     border: 2px solid black;
     padding-left: 1rem;
     background-color: #e8e8e8;
     font-size: 1rem;
-    font-family: NotoSansTC;
     &:focus {
       outline: none !important;
       border: 2px solid #1d0aff;
